# validahub-alpha

./: .commitlintrc.json  .env.development.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.dev  IDEMPOTENCY_KEY_SECURITY_AUDIT.md  LGPD_COMPLIANCE_REPORT.md  LGPD_COMPLIANCE_TESTS_SUMMARY.md  MULTI_TENANCY_ASSESSMENT.md  Makefile  PRODUCT_BACKLOG_LGPD.md  README.md  SECURITY_TEST_IMPLEMENTATION_REPORT.md  TECH_DEBT.md  docker-compose.yml  domain  logging_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_rules_tests.py
.adr/: ADR-001-structured-logging-with-structlog.md  ADR-002-ddd-layering-and-imports.md  ADR-003-idempotency-key-resolution-design.md  ADR-004-domain-audit-logging-job-lifecycle.md  ADR-005-file-reference-validation-and-security.md  ADR-006-pragmatic-domain-dependencies.md  README.md
.claude/: checklist.md
.claude/agents/: adr-architect.md  backend-dev.md  bi-visionary.md  brainstorm-facilitator.md  cybersec-validator.md  database-specialist.md  ddd-architect.md  devops-engineer.md  frontend-dev.md  git-pr-validator.md  lgpd-compliance.md  logging-observer.md  master-orchestrator.md  multi-tenant-architect.md  performance-architect.md  pm-po-bridge.md  pm-strategic-moat-builder.md  product-owner.md  python-fastapi-expert.md  qa-engineer.md  rule-engine-specialist.md  tdd-engineer.md  tech-debt-analyzer.md  telemetry-architect.md  validahub-copywriter.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  commit-validation.yml  conventional-commits.yml  pr-size.yml  pr-split-suggestion.yml  release.yml  rules-ci.yml
.hypothesis/constants/: 09816e28845092f3  19f97c8bac09ac47  71f57344fdbdad71  76c4808be865b27f  7d885d06a72c6fc3  b41eec837e0f012f  caa29e3d83fb6310  cd23771064022b75  ce00871cea196af9  e6e40ab3f87ba377
.pdr/: PDR-001-idempotency-compatibility-policy.md  PDR-002-accepted-file-types-for-upload.md  PDR-003-api-exposes-queued-status.md  PDR-004-lgpd-scope-for-mvp.md  README.md
.vh/: PROGRESS.md
.vh/steps/: 00-tests-red.md  01-ddd-architect.md  02-rule-engine-specialist.md  03-database-specialist.md
application/use_cases/: submit_job.py
apps/api/: main.py
apps/web/: README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
db/maintenance/: README.md  daily_maintenance.sql  setup_partition_automation.sql  weekly_maintenance.sql
db/migrations/: 001_create_rule_sets.py  002_create_rule_versions.py  003_create_correction_logs.py  004_create_partition_management.py  004_create_suggestions.py  005_create_rule_effectiveness.py  005_create_suggestions_complete.py  006_create_rls_policies.py  007_create_analytics_views.py  009_create_suggestions.py  (+2 more)
docs/: API.md  PR_GUIDELINES.md  README.md  RELEASE_PROCESS.md  TECH_DEBT.md  backlog-executavel.md
examples/: rules_engine_example.py
scripts/: check_arch.py  create-release.sh  demo_idempotency_security.py  generate_jwt_keys.py  setup-labels.sh  verify_security_fixes.py
tests/: README.md  conftest.py  fakes.py  test_improvement_checklist.md
(+316 files in other folders)
